change color fix margin description

--- a/recipe.html
+++ b/recipe.html
@@ -76,7 +76,7 @@
 			<div>Cooking time: 15 minutes</div>
 			<div>Servings: 2-3 servings</div>
 			<div class="rating">
-				<span style="color: black">Difficulty:</span>
+				<span style="color: inherit">Difficulty:</span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star"></span>
@@ -84,7 +84,7 @@
 				<span class="fa fa-star"></span>
 			</div>
 			<div class="rating">
-				<span style="color: black">Spiciness:</span>
+				<span style="color: inherit">Spiciness:</span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
@@ -243,7 +243,7 @@
 			<div>Cooking time: 15 minutes</div>
 			<div>Servings: 1 serving</div>
 			<div class="rating">
-				<span style="color: black">Difficulty:</span>
+				<span style="color: inherit">Difficulty:</span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star"></span>
@@ -251,7 +251,7 @@
 				<span class="fa fa-star"></span>
 			</div>
 			<div class="rating">
-				<span style="color: black">Spiciness:</span>
+				<span style="color: inherit">Spiciness:</span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
@@ -264,7 +264,7 @@
 					src="media/recipe-image/Nasi Goreng.jpg"
 				/>
 			</div>
-			<div class="description mb-5 mx-lg-5">
+			<div class="description">
 				The best food when you are home sick! There are various ways on
 				how to make Nasi Goreng, I know that every family has their own
 				twist for this simple yet delicious dish. Here is our take on
@@ -417,7 +417,7 @@
 			<div>Cooking time: 20 minutes</div>
 			<div>Servings: 8 pieces</div>
 			<div class="rating">
-				<span style="color: black">Difficulty:</span>
+				<span style="color: inherit">Difficulty:</span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
@@ -425,7 +425,7 @@
 				<span class="fa fa-star"></span>
 			</div>
 			<div class="rating">
-				<span style="color: black">Spiciness:</span>
+				<span style="color: inherit">Spiciness:</span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
 				<span class="fa fa-pepper-hot"></span>
@@ -438,7 +438,7 @@
 					src="media/recipe-image/Pisang Goreng.jpeg"
 				/>
 			</div>
-			<div class="description mb-5 mx-lg-5">
+			<div class="description">
 				Pisang goreng is sweet and crispy when done right! Getting the
 				right bananas for this dish in Vancouver may not be easy, but
 				when your cravings become too overpowering, we try to make it
