responsive embed, make boxes smaller

--- a/recipe.html
+++ b/recipe.html
@@ -92,13 +92,16 @@
 				<span class="fa fa-pepper-hot"></span>
 			</div>
 			<div class="food-image-container">
-				<iframe
-					src="https://www.youtube-nocookie.com/embed/LuLl_q3KzU0"
-					title="YouTube video player"
-					frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen
-				></iframe>
+				<div class="iframe-container">
+					<iframe
+						src="https://www.youtube-nocookie.com/embed/LuLl_q3KzU0"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+						loading="lazy"
+					></iframe>
+				</div>
 			</div>
 			<div class="description">
 				When in need of a savory snack or a side dish for your meal
