--- a/navbar.html
+++ b/navbar.html
@@ -70,6 +70,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="blog.html">BLOG</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="recipe.html">JUNE RECIPE</a>
+				</li>
 			</ul>
 		</div>
 	</div>
